# miniRT

./: CMakeLists.txt  Makefile  README.md  a.out  cy_cp_pl.rt  export.txt  grep  kek.c  miniRT  sc_sq.rt  scen.rt  scene.rt  scene1.rt  scene2.rt  scene3.rt  scene5.rt  wolf.rt
.deps/: include_list.txt  source_list.txt
ft_printf/: Makefile  libftprintf.a.IV8bZU  libftprintf.a.SXCQqm  libftprintf.a.dVwsBa
ft_printf/chars/: chars.c  ft_precision_zero.c  write_strings.c
ft_printf/digits/: digits.c  unsigned_int.c  width_precision.c
ft_printf/includes/: ft_printf.h
ft_printf/srcs/: ft_auxiliary.c  ft_parsers.c  ft_printf.c  ft_supp.c  is_utils.c  out.c
gnl/: get_next_line.c  get_next_line.h  get_next_line_utils.c
includes/: inc.h  intersect_and_light.h  minirt.h  mlx.h  solve_mlx.h  structs.h  vectors.h
intersect/: intersect_cylinder.c  intersect_plane.c  intersect_square.c  intersect_triangle.c
libft/: Makefile  ft_split.c  ft_strjoin.c  libft.h
limits/: do_limits.c
matrix_scene/: alloc_matrix.c  cp_matrix.c  cp_matrix2.c  cp_scene.c  matrix_product.c  matrix_use.c
miniRT.dSYM/Contents/Resources/DWARF/: miniRT
minilibx_mms/: Makefile
mlx_branching/: .utils_for_rtx.c.swp  angle_viewport.c  angles_calculate.c  angles_to_center.c  angles_to_coordinates.c  color.c  color_utils.c  comparison.c  ft_matrix.c  ft_rtx_rt.c  ft_vectors.c  ft_vectors2.c  ft_vectors3.c  intersect.c  mlx_work_branching.c  painting_scene.c  rotating_oss.c  utils_for_rtx.c
mlx_branching/gnl/: get_next_line.c  get_next_line.h
parser/: .ft_crutch.c.swp  .pars_all.c.swp  .parser.c.swp  .parsing_values_second.c.swp  .validator_alloc_stucts.c.swp  alloc_for_pars.c  ft_crutch.c  init_structs.c  pars_all.c  parser.c  parsing_values.c  parsing_values_second.c  triangle_parser.c  validator.c  validator_alloc_stucts.c
parser/alloc_structs/: .alloc_light.c.swp  .alloc_plane.c.swp  .alloc_sphere.c.swp  .alloc_square.c.swp  .alloc_triangle.c.swp  alloc_cylinder.c  alloc_light.c  alloc_plane.c  alloc_sphere.c  alloc_square.c  alloc_triangle.c
srcs/: .exit_errors.c.swp  .free_scene.c.swp  .ft_atof_ptr.c.swp  .ft_atoi_ptr.c.swp  .image_to_bmp.c.swp  .main.c.swp  exit_errors.c  free_scene.c  ft_atof.c  ft_atof_ptr.c  ft_atoi_ptr.c  image_to_bmp.c  main.c
work_with_color/: color.c  color2.c  light_branching.c  light_branching2.c  take_normals.c  triangle_normal.c
