cmake_minimum_required(VERSION 3.17)
project(miniRT C)

set(CMAKE_C_STANDARD 99)

include_directories(ft_printf/includes)
include_directories(gnl)
include_directories(includes)
include_directories(libft)
include_directories(minilibx_opengl)
target_link_libraries(libmlx.dylib)
add_executable(miniRT
        ft_printf/chars/chars.c
        ft_printf/chars/ft_precision_zero.c
        ft_printf/chars/write_strings.c
        ft_printf/digits/digits.c
        ft_printf/digits/unsigned_int.c
        ft_printf/digits/width_precision.c
        ft_printf/includes/ft_printf.h
        ft_printf/srcs/ft_auxiliary.c
        ft_printf/srcs/ft_parsers.c
        ft_printf/srcs/ft_printf.c
        ft_printf/srcs/ft_supp.c
        ft_printf/srcs/is_utils.c
        ft_printf/srcs/out.c
        gnl/get_next_line.c
        gnl/get_next_line.h
        gnl/get_next_line_utils.c
        includes/minirt.h
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_calloc.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd_back.c
        libft/ft_lstadd_front.c
        libft/ft_lstclear.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstlast.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstsize.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar_fd.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr_fd.c
        libft/ft_split.c
        libft/ft_strchr.c
        libft/ft_strdup.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ft_strmapi.c
        libft/ft_strncmp.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strtrim.c
        libft/ft_substr.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        mlx_branching/mlx_work_branching.c
        parser/alloc_structs/alloc_cylinder.c
        parser/alloc_structs/alloc_light.c
        parser/alloc_structs/alloc_plane.c
        parser/alloc_structs/alloc_sphere.c
        parser/alloc_structs/alloc_square.c
        parser/alloc_structs/alloc_triangle.c
        parser/alloc_for_pars.c
        parser/ft_crutch.c
        parser/init_structs.c
        parser/pars_all.c
        parser/parser.c
        parser/parsing_values.c
        parser/parsing_values_second.c
        parser/triangle_parser.c
        parser/validator_alloc_stucts.c
        srcs/exit_errors.c
        srcs/free_scene.c
        srcs/ft_atof.c
        srcs/ft_atof_ptr.c
        srcs/ft_atoi_ptr.c
        srcs/main.c
        main.c)
