cmake_minimum_required(VERSION 3.17)
project(miniRT C)

set(CMAKE_C_STANDARD 99)

set(PATH "./srcs ./parser ./gnl ./parser/alloc_structs ./mlx_branching")
set(PATHLIB libft)
include_directories(ft_printf/includes)
include_directories(gnl)
include_directories(includes)
include_directories(libft)
include_directories(./includes/)
AUX_SOURCE_DIRECTORY (${PATH} MY_SRCS)
AUX_SOURCE_DIRECTORY (${PATHLIB} SRCLIB)
set(SOURCE_FILES ${MY_SRCS} mlx_branching/ft_matrix.c mlx_branching/utils_for_rtx.c)
set(CMAKE_C_FLAGS  "-lmlx")
LINK_DIRECTORIES(./)
add_library(libft.a STATIC ${SRCLIB})
add_executable(miniRT ${SOURCE_FILES})
target_link_libraries(miniRT libft/libft.a libmlx.dylib)